# RealViewChat

./: .gitignore  Dockerfile.worker  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 36cce27c863a_allow_multiple_room_consolidations_per_.py  453f1135957b_initial_schema.py
docs/: DIAGRAMS.md
messaging/: REPRODUCE.md  demo_worker.py  docker-compose.yml
observability/: docker-compose.yml  generate_traffic.py
observability/grafana/dashboards/: realview.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/prometheus/: prometheus.yml
scripts/: capture_baseline.py  compare_responses.py  migrate_json_to_db.py  run_worker.py
src/realview_chat/: config.py
src/realview_chat/db/: base.py  config.py  ingest.py  models.py  serializers.py
src/realview_chat/messaging/: __init__.py  config.py  metrics.py  producer.py  topology.py  worker.py
src/realview_chat/openai_client/: __init__.py  responses.py
src/realview_chat/pipeline/: property_processor.py
tests/: conftest.py  factories.py  fakes.py  test_infra.py
tests/integration/: test_api.py  test_async.py  test_dashboard_endpoints.py  test_metrics.py
tests/unit/: test_pipeline.py  test_repository.py  test_serializer.py  test_worker_logic.py
web/backend/: app.py
web/frontend/: package-lock.json  package.json  vite.config.js
web/frontend/src/components/ui/: ClassificationBadge.test.jsx
web/frontend/src/services/: api.test.js
